@@ -1,5 +1,6 @@
 Version 2.8, xx, xxxx, xxxx
 
+103. Call mlockall() in h2initGlob() when running under Xenomai.
 102. Go back to pmap_unset() to unregister pre-existing posterServer service.
 101. Fixes for building Xenomai support.
 100. Fixes for cross-compilation in OpenEmbedded
